--- a/Specialized-Adoption-Agency.html
+++ b/Specialized-Adoption-Agency.html
@@ -311,7 +311,7 @@
           <div class="col-md-6 order-md-1 order-2">
             <img src="./assets/images/slider1.jpg" alt="img" class="img-fluid">
           </div>
-          <div class="col-md-6 d-flex align-items-center">
+          <div class="col-md-6 d-flex align-items-center order-md-2 order-1">
             <div>
               <div class="col-md-12 order-md-2 order-1">
                 <div class="sec_titles">
@@ -550,7 +550,6 @@ Biological parents.
             </div>
 
           </div>
-          <hr>
         </div>
       </div>
     </section>
