--- a/donate.html
+++ b/donate.html
@@ -127,7 +127,7 @@
                             </div>
                             <div class="col-md-6">
                                 <p>
-                                    :
+                                    : 50742011000030
                                 </p>
                             </div>
                             <div class="col-md-4">
@@ -137,7 +137,7 @@
                             </div>
                             <div class="col-md-6">
                                 <p>
-                                    :
+                                    : BOI
                                 </p>
                             </div>
                             <div class="col-md-4">
@@ -147,7 +147,7 @@
                             </div>
                             <div class="col-md-6">
                                 <p>
-                                    :
+                                    : Bank of India
                                 </p>
                             </div>
                             <div class="col-md-4">
@@ -157,9 +157,15 @@
                             </div>
                             <div class="col-md-6">
                                 <p>
-                                    :
+                                    : Roing
                                 </p>
                             </div>
+                        </div>
+                        <div class="row mt-5">
+                          <div class="col-md-6 mx-auto">
+                             <h5 class="text-center">You can scan the QR Code below</h5>
+                             <img src="./assets/images/qr.jpeg" alt="qr" class="w-100">
+                          </div>
                         </div>
                     </div>
                 </div>
@@ -218,7 +224,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
             <div>
-              <p>Nani Maria © All right Reserved.</p>
+              <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
 
           </div>
