--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               Nani Maria Society has given due emphasis on empowerment of women and nurturing orphan & destitute women
               and Children.
             </p>
-            <a href="#" class="btn btn-common">
+            <a href="./donate.html" class="btn btn-common">
               Donate
             </a>
           </div>
@@ -452,7 +452,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
             <div>
-              <p>Nani Maria © All right Reserved.</p>
+              <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
 
           </div>
