--- a/Children-Care-Institute.html
+++ b/Children-Care-Institute.html
@@ -140,6 +140,18 @@
                 Integrated Child Protection Scheme (ICPS) under the Ministry of
                 Women and Child development, Government of India.
               </p>
+              <div class="mt-4">
+                <h5>
+                  Contact Us 
+                 </h5>
+                 <a href="tel:+9160090 54245" class="contactLink">
+                   <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                    <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                      <i class="fa fa-phone"></i>
+                     </span>
+                   </div> +91 60090 54245
+                 </a>
+              </div>
             </div>
           </div>
           <div class="col-md-6">
@@ -617,7 +629,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
             <div>
-              <p>Nani Maria © All right Reserved.</p>
+              <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
 
           </div>
