--- a/Specialized-Adoption-Agency.html
+++ b/Specialized-Adoption-Agency.html
@@ -137,6 +137,18 @@
                 medical treatment, clothing and hygienic environment by trained nurses and caretakers and place
                 them in good families.
               </p>
+              <div class="mt-4">
+                <h5>
+                  Contact Us 
+                 </h5>
+                 <a href="tel:+9196121 17652" class="contactLink">
+                   <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                    <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                      <i class="fa fa-phone"></i>
+                     </span>
+                   </div> +91 96121 17652
+                 </a>
+               </div>
             </div>
           </div>
           <div class="col-md-6">
@@ -546,7 +558,7 @@ Biological parents.
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
             <div>
-              <p>Nani Maria © All right Reserved.</p>
+              <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
 
           </div>
