--- a/one_stop_centre.html
+++ b/one_stop_centre.html
@@ -130,6 +130,18 @@
           </div>
           <div class="col-md-6">
             <img src="./assets/images/zQWEPn.jpg" alt="certificate" class="img-fluid">
+             <div class="mt-4">
+              <h5>
+                Contact Us 
+               </h5>
+               <a href="tel:+9199166 31148" class="contactLink">
+                 <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                  <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                    <i class="fa fa-phone"></i>
+                   </span>
+                 </div> +91 99166 31148
+               </a>
+             </div>
           </div>
         </div>
       </div>
@@ -326,7 +338,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
             <div>
-              <p>Nani Maria © All right Reserved.</p>
+              <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
 
           </div>
