--- a/Specialized-Adoption-Agency.html
+++ b/Specialized-Adoption-Agency.html
@@ -371,7 +371,7 @@ Biological parents.
         <div class="row">
           <div class="col-md-12 text-center">
             <div class="sec_titles sec_titles-head mb-4">
-              <img src="./assets/images/adoption.png" alt="img">
+              <img src="./assets/images/adoption.png" alt="img" class="Y_floating">
               <h3 class="italic">Adoption Is Blessing</h3>
             </div>
           </div>
