--- a/index.html
+++ b/index.html
@@ -400,6 +400,217 @@
         </div>
       </div>
     </section>
+    <section class="our_thanks py-5 experience_screen">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sec_titles sec_titles-head mb-4 text-center">
+              <img src="./assets/images/adoption.png" alt="img" class="Y_floating">
+              <h3 class="italic">Our Thanks</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="thanks_card">
+              <img src="./assets/images/thank-you.png" alt="thanks" class="thanksStikcer">
+               <h3>Government Of Arunachal Pradesh</h3>
+               <ul>
+                <li>
+                  Department Of School Education.
+                </li>
+                <li>
+                  Department Of Social Welfare, Women & Child Development.
+                </li>
+                <li>
+                  Directorate of Health Services.
+                </li>
+                <li>
+                  Arunachal Pradesh State Commission for Women.
+                </li>
+               </ul>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thanks_card">
+              <img src="./assets/images/thank-you.png" alt="thanks" class="thanksStikcer">
+               <h3>Voluntary Organization</h3>
+               <ul>
+                <li>
+                  CWC Roing
+                </li>
+                <li>
+                  DCPU Changlang
+                </li>
+                <li>
+                  Indian Oil Corporation Limited
+                </li>
+                <li>
+                  Kendra
+                </li>
+                <li>
+                  IFCRA 
+                </li>
+               </ul>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="thanks_card">
+              <img src="./assets/images/thank-you.png" alt="thanks" class="thanksStikcer">
+               <h3>Personally</h3>
+               <div class="marquee">
+                <div class="marquee-content">
+                   <p>
+                    Rosy Taba Gongo ( National Commission For Protection of Child Rights )
+                   </p>
+                   <p>
+                    Shiv Kumar ( Deputy Commissioner, Roing )
+                   </p>
+                   <p>
+                    Ravi Dhawan (Deputy Commissioner, Roing )
+                   </p>
+                   <p>
+                    Mitali Nam Chum (Deputy Commissioner, Roing )
+                   </p>
+                   <p>
+                    Tipi Loyi ( Director of Women & Child Development )
+                   </p>
+                   <p>
+                    Shanjay Kumar ( Indian Police Service )
+                   </p>
+                   <p>
+                    Mutchu Mithi ( MLA , Roing )
+                   </p>
+                   <p>
+                    Smt. Mitali Namchoom (IAS) Deputy Commission. Roing L/Dibang Valley Dist.
+                   </p>
+                   <p>
+                    Commandant BRTF GREF, Roing.
+                   </p>
+                   <p>
+                    Smt. Savitri Namchoom Linggi, DD.ICDs, Roing.
+                   </p>
+                   <p>
+                    Smt. G .Perying, DD. ICDs, Roing
+                   </p>
+                   <p>
+                    Sri. Mopi Mihu, HMLA, Dibang Valley dist. Anini.
+                   </p>
+                   <p>
+                    Dr. Manaya mena, ex-Chairperson CWC, Roing.
+                   </p>
+                   <p>
+                    Sri. Ngapi Meto, protection officer, DCPU, Roing.
+                   </p>
+                   <p>
+                    Sri. Menga Linggi.
+                   </p>
+                   <p>
+                    Smt. Ago Linggi
+                   </p>
+                   <p>
+                    NHPC, Pvt. Limited
+                   </p>
+                   <p>
+                    General manager NHAIDCl Pvt. Limited.
+                   </p>
+                   <p>
+                    Smt. Namne Mena.
+                   </p>
+                   <p>
+                    S.Rorang, PO, DCPU, Changlang.
+                   </p>
+                   <p>
+                    Sohum Autocate Pvt. Ltd.
+                   </p>
+                   <p>
+                    Sri. BiplovKachari.
+                   </p>
+                   <p>
+                    Sri. Tez Bahadur Thapa, Coordinator, Nine is Mine organization, Darjeeling, West Bengal.
+                   </p>
+                   <p>
+                    Smt. Dasanglu Pul, HMLA, Hawai, Anjaw Dist.
+                   </p>
+                   <p>
+                    Rosy Taba Gongo ( National Commission For Protection of Child Rights )
+                   </p>
+                   <p>
+                    Shiv Kumar ( Deputy Commissioner, Roing )
+                   </p>
+                   <p>
+                    Ravi Dhawan (Deputy Commissioner, Roing )
+                   </p>
+                   <p>
+                    Mitali Nam Chum (Deputy Commissioner, Roing )
+                   </p>
+                   <p>
+                    Tipi Loyi ( Director of Women & Child Development )
+                   </p>
+                   <p>
+                    Shanjay Kumar ( Indian Police Service )
+                   </p>
+                   <p>
+                    Mutchu Mithi ( MLA , Roing )
+                   </p>
+                   <p>
+                    Smt. Mitali Namchoom (IAS) Deputy Commission. Roing L/Dibang Valley Dist.
+                   </p>
+                   <p>
+                    Commandant BRTF GREF, Roing.
+                   </p>
+                   <p>
+                    Smt. Savitri Namchoom Linggi, DD.ICDs, Roing.
+                   </p>
+                   <p>
+                    Smt. G .Perying, DD. ICDs, Roing
+                   </p>
+                   <p>
+                    Sri. Mopi Mihu, HMLA, Dibang Valley dist. Anini.
+                   </p>
+                   <p>
+                    Dr. Manaya mena, ex-Chairperson CWC, Roing.
+                   </p>
+                   <p>
+                    Sri. Ngapi Meto, protection officer, DCPU, Roing.
+                   </p>
+                   <p>
+                    Sri. Menga Linggi.
+                   </p>
+                   <p>
+                    Smt. Ago Linggi
+                   </p>
+                   <p>
+                    NHPC, Pvt. Limited
+                   </p>
+                   <p>
+                    General manager NHAIDCl Pvt. Limited.
+                   </p>
+                   <p>
+                    Smt. Namne Mena.
+                   </p>
+                   <p>
+                    S.Rorang, PO, DCPU, Changlang.
+                   </p>
+                   <p>
+                    Sohum Autocate Pvt. Ltd.
+                   </p>
+                   <p>
+                    Sri. BiplovKachari.
+                   </p>
+                   <p>
+                    Sri. Tez Bahadur Thapa, Coordinator, Nine is Mine organization, Darjeeling, West Bengal.
+                   </p>
+                   <p>
+                    Smt. Dasanglu Pul, HMLA, Hawai, Anjaw Dist.
+                   </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="bg-light pt-5">
     <section id="footer">
