--- a/index.html
+++ b/index.html
@@ -610,6 +610,14 @@
           </div>
         </div>
       </div>
+      <div class="container pt-5">
+        <div class="row pt-5">
+          <div class="col-md-12 text-center">
+            <h5>Website content writer</h5>
+            <h5><b>Doni</b> </h5>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="bg-light pt-5">
@@ -643,8 +651,30 @@
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
             <h5>Contact Us</h5>
             <div>
-               <h6>Address : </h6>
-               <h6>Phone : </h6>
+               <h6>One Stop Center contact no </h6>
+               <a href="tel:+9199166 31148" class="contactLink">
+                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                   <i class="fa fa-phone"></i>
+                  </span>
+                </div> +91 99166 31148
+              </a>
+              <h6 class="mt-4">SAA (Specialised Adoption Agency) contact no </h6>
+              <a href="tel:+9196121 17652" class="contactLink">
+                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                   <i class="fa fa-phone"></i>
+                  </span>
+                </div> +91 96121 17652
+              </a>
+              <h6 class="mt-4">Children's Home contact no </h6>
+              <a href="tel:+9160090 54245" class="contactLink">
+                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                   <i class="fa fa-phone"></i>
+                  </span>
+                </div> +91 60090 54245
+              </a>
             </div>
           </div>
         </div>
@@ -661,11 +691,13 @@
           <hr>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
+          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-between">
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
-
+            <div>
+              Designed and Developed by @Dipak
+            </div>
           </div>
         </div>
       </div>
