--- a/Children-Care-Institute.html
+++ b/Children-Care-Institute.html
@@ -270,6 +270,9 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-md-7 mx-auto pt-5">
+            <img src="./assets/images/g48.jpeg" alt="img" class="w-100">
+          </div>
           <div class="col-md-12 text-center mt-5">
             <div class="sec_titles">
               <h3>Details of cases registered in Nani Maria Children’s Home <span></span></h3>
@@ -803,6 +806,16 @@
                  </span>
                </div> +91 60090 54245
              </a>
+             <h6 class="mt-4">
+              School contact no
+             </h6>
+             <a href="tel:+91 89747 55860" class="contactLink">
+               <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                  <i class="fa fa-phone"></i>
+                 </span>
+               </div> +91 89747 55860
+             </a>
             </div>
           </div>
         </div>
@@ -823,7 +836,7 @@
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
-            <div>
+            <div class="less-opacity">
               Designed and Developed by @Dipak
             </div>
           </div>
