--- a/Specialized-Adoption-Agency.html
+++ b/Specialized-Adoption-Agency.html
@@ -210,33 +210,53 @@
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>2017</td>
-                    <td>1</td>
-                    <td>1</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>0</td>
-                    <td>1</td>
+                    <td>2019-2020</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
-                    <td>2021</td>
-                    <td>8</td>
-                    <td>7</td>
-                    <td>1</td>
-                    <td>0</td>
-                    <td>5</td>
-                    <td>2</td>
+                    <td>2020-2021</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
+                    <td>Nil</td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td>2022</td>
-                    <td>3</td>
+                    <td>2021-2022</td>
+                    <td>9</td>
+                    <td>8</td>
                     <td>1</td>
+                    <td>0</td>
+                    <td>6</td>
+                    <td>3</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>2022-2023</td>
+                    <td>3</td>
                     <td>2</td>
+                    <td>1</td>
                     <td>1</td>
                     <td>0</td>
                     <td>2</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>2023-2024</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>1</td>
                   </tr>
                 </tbody>
               </table>
@@ -562,6 +582,16 @@ Biological parents.
                  </span>
                </div> +91 60090 54245
              </a>
+             <h6 class="mt-4">
+              School contact no
+             </h6>
+             <a href="tel:+91 89747 55860" class="contactLink">
+               <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                  <i class="fa fa-phone"></i>
+                 </span>
+               </div> +91 89747 55860
+             </a>
             </div>
           </div>
         </div>
@@ -582,7 +612,7 @@ Biological parents.
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
-            <div>
+            <div class="less-opacity">
               Designed and Developed by @Dipak
             </div>
           </div>
