--- a/nani-maria-kinder-school.html
+++ b/nani-maria-kinder-school.html
@@ -96,6 +96,18 @@
             <p>
                 Fulfilling the need for compulsory education for all children in the age group of 6-14 is empirical to the Government of India , which is directly mentioned via Article 45 of the constitution. Our Nani Maria Kinder Garten School are committed to promoting literacy, especially for the girl child. Several schemes and initiatives have been undertaken to improve the lives of deserving students through education which ensures that children of our society can have free access to quality education, which in turn decrease the illiteracy rates.
             </p>
+            <div class="mt-4">
+              <h5>
+                Contact Us 
+               </h5>
+               <a href="tel:+91 89747 55860" class="contactLink">
+                 <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                  <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                    <i class="fa fa-phone"></i>
+                   </span>
+                 </div> +91 89747 55860
+               </a>
+             </div>
           </div>
           <div class="col-md-6 offset-md-6">
             <p>
@@ -264,6 +276,16 @@ opportunities to succeed in Life.
                  </span>
                </div> +91 60090 54245
              </a>
+             <h6 class="mt-4">
+              School contact no
+             </h6>
+             <a href="tel:+91 89747 55860" class="contactLink">
+               <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                  <i class="fa fa-phone"></i>
+                 </span>
+               </div> +91 89747 55860
+             </a>
             </div>
           </div>
         </div>
@@ -284,7 +306,7 @@ opportunities to succeed in Life.
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
-            <div>
+            <div class="less-opacity">
               Designed and Developed by @Dipak
             </div>
           </div>
