--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -404,6 +404,16 @@
                  </span>
                </div> +91 60090 54245
              </a>
+             <h6 class="mt-4">
+              School contact no
+             </h6>
+             <a href="tel:+91 89747 55860" class="contactLink">
+               <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                  <i class="fa fa-phone"></i>
+                 </span>
+               </div> +91 89747 55860
+             </a>
             </div>
           </div>
         </div>
@@ -424,7 +434,7 @@
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
             </div>
-            <div>
+            <div class="less-opacity">
               Designed and Developed by @Dipak
             </div>
           </div>
