--- a/index.html
+++ b/index.html
@@ -614,6 +614,9 @@
         <div class="row pt-5">
           <div class="col-md-12 text-center">
             <h5>Website content writer</h5>
+            <div class="imgBox">
+              <img src="./assets/images/doni.jpeg" alt="img">
+            </div>
             <h5><b>Miss Doni Riram</b> </h5>
           </div>
         </div>
