--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
           <div class="col-md-12 text-center">
             <h5>Website content writer</h5>
             <div class="imgBox">
-              <img src="./assets/images/doni.jpeg" alt="img">
+              <img src="./assets/images/doni22.jpeg" alt="img">
             </div>
             <h5><b>Miss Doni Riram</b> </h5>
           </div>
