--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="short icon" href="./assets/images/logo.png">
   <title>Nani Maria Society</title>
+  <meta name="description" content="NANI MARIA SOCIETY, founded by Smt. Desai Linggi in 2002 in Roing, Arunachal Pradesh, supports marginalized tribal women and children through empowerment, socio-economic, cultural, and educational programs.">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -93,7 +95,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1>Advancing the Welfare of Tribal Women and Children</h1>
+            <h1>Advancing the Welfare of  Women and Children</h1>
             <p>
               Nani Maria Society has given due emphasis on empowerment of women and nurturing orphan & destitute women
               and Children.
@@ -645,16 +647,24 @@
               <li><a href="./contact-us.html"><i class="fa fa-angle-double-right"></i>Contact Us</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
-            <h5>Resource Center</h5>
-            <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="fa fa-angle-double-right"></i>Annual Report</a></li>
-            </ul>
+          <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4 pl-md-0">
+            <h5>Address</h5>
+             <address class="d-flex">
+               <div class="mr-1">
+                  <img src="./assets/images/placeholder.png" alt="location" width="22">
+               </div> <p>
+                Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
+               </p>
+             </address>
+             <h5 class="mt-5">Email</h5>
+             <a href="mailto:nanimariasocietyroing@gmail.com" class="mail_logo d-flex align-items-center">
+               <img src="./assets/images/gmail.png" alt="gmail" width="22" class="d-inline mr-2"> nanimariasocietyroing@gmail.com
+             </a>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
             <h5>Contact Us</h5>
             <div>
-               <h6>One Stop Center contact no </h6>
+               <h6 class="page_link"><a href="./one_stop_centre.html"><i class="fa fa-angle-double-right"></i> One Stop Center contact no</a> </h6>
                <a href="tel:+9199166 31148" class="contactLink">
                 <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                  <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -662,7 +672,7 @@
                   </span>
                 </div> +91 99166 31148
               </a>
-              <h6 class="mt-4">SAA (Specialised Adoption Agency) contact no </h6>
+              <h6 class="mt-4 page_link"><a href="./Specialized-Adoption-Agency.html"><i class="fa fa-angle-double-right"></i> SAA (Specialised Adoption Agency) contact no</a> </h6>
               <a href="tel:+9196121 17652" class="contactLink">
                 <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                  <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -670,7 +680,9 @@
                   </span>
                 </div> +91 96121 17652
               </a>
-              <h6 class="mt-4">Children's Home contact no </h6>
+              <h6 class="mt-4 page_link"> <a href="./Children-Care-Institute.html">
+                <i class="fa fa-angle-double-right"></i> Children's Home contact no
+              </a> </h6>
               <a href="tel:+9160090 54245" class="contactLink">
                 <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                  <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -678,8 +690,10 @@
                   </span>
                 </div> +91 60090 54245
               </a>
-              <h6 class="mt-4">
-                School contact no
+              <h6 class="mt-4 page_link">
+                <a href="./nani-maria-kinder-school.html">
+                  <i class="fa fa-angle-double-right"></i> School contact no
+                </a>
                </h6>
                <a href="tel:+91 89747 55860" class="contactLink">
                  <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
