--- a/one_stop_centre.html
+++ b/one_stop_centre.html
@@ -174,28 +174,28 @@
                   </tr>
                   <tr>
                     <th>2</th>
-                    <td>8</td>
+                    <td>9</td>
                     <td>2021</td>
                     <td>Married & Unmarried</td>
                     <td>Shelter & Protection</td>
                   </tr>
                   <tr>
                     <th>3</th>
-                    <td>13</td>
+                    <td>12</td>
                     <td>2022</td>
                     <td>Married & Unmarried</td>
                     <td>Shelter</td>
                   </tr>
                   <tr>
                     <th>4</th>
-                    <td>2</td>
+                    <td>5</td>
                     <td>2023</td>
                     <td>Married & Unmarried</td>
                     <td>Shelter</td>
                   </tr>
                   <tr>
                     <th>Total</th>
-                    <td>24</td>
+                    <td>27</td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -309,16 +309,24 @@
               <li><a href="./contact-us.html"><i class="fa fa-angle-double-right"></i>Contact Us</a></li>
             </ul>
           </div>
-          <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
-            <h5>Resource Center</h5>
-            <ul class="list-unstyled quick-links">
-              <li><a href="#"><i class="fa fa-angle-double-right"></i>Annual Report</a></li>
-            </ul>
+          <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4 pl-md-0">
+            <h5>Address</h5>
+             <address class="d-flex">
+               <div class="mr-1">
+                  <img src="./assets/images/placeholder.png" alt="location" width="22">
+               </div> <p>
+                Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
+               </p>
+             </address>
+             <h5 class="mt-5">Email</h5>
+             <a href="mailto:nanimariasocietyroing@gmail.com" class="mail_logo d-flex align-items-center">
+               <img src="./assets/images/gmail.png" alt="gmail" width="22" class="d-inline mr-2"> nanimariasocietyroing@gmail.com
+             </a>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
             <h5>Contact Us</h5>
             <div>
-              <h6>One Stop Center contact no </h6>
+              <h6 class="page_link"><a href="./one_stop_centre.html"><i class="fa fa-angle-double-right"></i> One Stop Center contact no</a> </h6>
               <a href="tel:+9199166 31148" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -326,7 +334,7 @@
                  </span>
                </div> +91 99166 31148
              </a>
-             <h6 class="mt-4">SAA (Specialised Adoption Agency) contact no </h6>
+             <h6 class="mt-4 page_link"><a href="./Specialized-Adoption-Agency.html"><i class="fa fa-angle-double-right"></i> SAA (Specialised Adoption Agency) contact no</a> </h6>
              <a href="tel:+9196121 17652" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -334,7 +342,9 @@
                  </span>
                </div> +91 96121 17652
              </a>
-             <h6 class="mt-4">Children's Home contact no </h6>
+             <h6 class="mt-4 page_link"> <a href="./Children-Care-Institute.html">
+               <i class="fa fa-angle-double-right"></i> Children's Home contact no
+             </a> </h6>
              <a href="tel:+9160090 54245" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -342,16 +352,18 @@
                  </span>
                </div> +91 60090 54245
              </a>
-             <h6 class="mt-4">
-              School contact no
-             </h6>
-             <a href="tel:+91 89747 55860" class="contactLink">
-               <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
-                <span class="contactIcon d-inline-flex justify-content-center align-items-center">
-                  <i class="fa fa-phone"></i>
-                 </span>
-               </div> +91 89747 55860
-             </a>
+             <h6 class="mt-4 page_link">
+               <a href="./nani-maria-kinder-school.html">
+                 <i class="fa fa-angle-double-right"></i> School contact no
+               </a>
+              </h6>
+              <a href="tel:+91 89747 55860" class="contactLink">
+                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
+                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
+                   <i class="fa fa-phone"></i>
+                  </span>
+                </div> +91 89747 55860
+              </a>
             </div>
           </div>
         </div>
