--- a/one_stop_centre.html
+++ b/one_stop_centre.html
@@ -311,13 +311,15 @@
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4 pl-md-0">
             <h5>Address</h5>
-             <address class="d-flex">
-               <div class="mr-1">
-                  <img src="./assets/images/placeholder.png" alt="location" width="22">
-               </div> <p>
-                Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
-               </p>
-             </address>
+            <a href="https://maps.app.goo.gl/hATdJ8V3ciwLzWGGA" target="_blank" class="map_link">
+              <address class="d-flex">
+                <div class="mr-1">
+                   <img src="./assets/images/placeholder.png" alt="location" width="22">
+                </div> <p>
+                 Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
+                </p>
+              </address>
+            </a>
              <h5 class="mt-5">Email</h5>
              <a href="mailto:nanimariasocietyroing@gmail.com" class="mail_logo d-flex align-items-center">
                <img src="./assets/images/gmail.png" alt="gmail" width="22" class="d-inline mr-2"> nanimariasocietyroing@gmail.com
@@ -326,7 +328,7 @@
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
             <h5>Contact Us</h5>
             <div>
-              <h6 class="page_link"><a href="./one_stop_centre.html"><i class="fa fa-angle-double-right"></i> One Stop Center contact no</a> </h6>
+              <h6 class="page_link"><a href="./one_stop_centre.html"><i class="fa fa-angle-double-right"></i> One Stop Center </a> </h6>
               <a href="tel:+9199166 31148" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -334,7 +336,7 @@
                  </span>
                </div> +91 99166 31148
              </a>
-             <h6 class="mt-4 page_link"><a href="./Specialized-Adoption-Agency.html"><i class="fa fa-angle-double-right"></i> SAA (Specialised Adoption Agency) contact no</a> </h6>
+             <h6 class="mt-4 page_link"><a href="./Specialized-Adoption-Agency.html"><i class="fa fa-angle-double-right"></i> SAA (Specialised Adoption Agency) </a> </h6>
              <a href="tel:+9196121 17652" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -343,7 +345,7 @@
                </div> +91 96121 17652
              </a>
              <h6 class="mt-4 page_link"> <a href="./Children-Care-Institute.html">
-               <i class="fa fa-angle-double-right"></i> Children's Home contact no
+               <i class="fa fa-angle-double-right"></i> Children's Home 
              </a> </h6>
              <a href="tel:+9160090 54245" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
@@ -354,7 +356,7 @@
              </a>
              <h6 class="mt-4 page_link">
                <a href="./nani-maria-kinder-school.html">
-                 <i class="fa fa-angle-double-right"></i> School contact no
+                 <i class="fa fa-angle-double-right"></i> Nani Maria Kinder Garten School
                </a>
               </h6>
               <a href="tel:+91 89747 55860" class="contactLink">
