--- a/contact-us.html
+++ b/contact-us.html
@@ -170,6 +170,13 @@
               </div>
             </div>
             <div class="row mt-5">
+              <div class="col-md-12 mx-auto mt-5">
+                <div>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3518.456428843319!2d95.84036967548259!3d28.13259027594144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjjCsDA3JzU3LjMiTiA5NcKwNTAnMzQuNiJF!5e0!3m2!1sen!2sin!4v1719061803617!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-5">
               <div class="col-md-7 mx-auto mt-5">
                   <div class="details_box">
                       <div class="row">
@@ -225,13 +232,15 @@
           </div>
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4 pl-md-0">
             <h5>Address</h5>
-             <address class="d-flex">
-               <div class="mr-1">
-                  <img src="./assets/images/placeholder.png" alt="location" width="22">
-               </div> <p>
-                Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
-               </p>
-             </address>
+            <a href="https://maps.app.goo.gl/hATdJ8V3ciwLzWGGA" target="_blank" class="map_link">
+              <address class="d-flex">
+                <div class="mr-1">
+                   <img src="./assets/images/placeholder.png" alt="location" width="22">
+                </div> <p>
+                 Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
+                </p>
+              </address>
+            </a>
              <h5 class="mt-5">Email</h5>
              <a href="mailto:nanimariasocietyroing@gmail.com" class="mail_logo d-flex align-items-center">
                <img src="./assets/images/gmail.png" alt="gmail" width="22" class="d-inline mr-2"> nanimariasocietyroing@gmail.com
@@ -240,7 +249,7 @@
           <div class="col-xs-12 col-sm-4 col-md-3 mt-md-0 mt-4">
             <h5>Contact Us</h5>
             <div>
-              <h6 class="page_link"><a href="./one_stop_centre.html"><i class="fa fa-angle-double-right"></i> One Stop Center contact no</a> </h6>
+              <h6 class="page_link"><a href="./one_stop_centre.html"><i class="fa fa-angle-double-right"></i> One Stop Center </a> </h6>
               <a href="tel:+9199166 31148" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -248,7 +257,7 @@
                  </span>
                </div> +91 99166 31148
              </a>
-             <h6 class="mt-4 page_link"><a href="./Specialized-Adoption-Agency.html"><i class="fa fa-angle-double-right"></i> SAA (Specialised Adoption Agency) contact no</a> </h6>
+             <h6 class="mt-4 page_link"><a href="./Specialized-Adoption-Agency.html"><i class="fa fa-angle-double-right"></i> SAA (Specialised Adoption Agency)</a> </h6>
              <a href="tel:+9196121 17652" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
                 <span class="contactIcon d-inline-flex justify-content-center align-items-center">
@@ -257,7 +266,7 @@
                </div> +91 96121 17652
              </a>
              <h6 class="mt-4 page_link"> <a href="./Children-Care-Institute.html">
-               <i class="fa fa-angle-double-right"></i> Children's Home contact no
+               <i class="fa fa-angle-double-right"></i> Children's Home 
              </a> </h6>
              <a href="tel:+9160090 54245" class="contactLink">
                <div class="contactIconOuter d-inline-flex justify-content-center align-items-center">
@@ -268,7 +277,7 @@
              </a>
              <h6 class="mt-4 page_link">
                <a href="./nani-maria-kinder-school.html">
-                 <i class="fa fa-angle-double-right"></i> School contact no
+                 <i class="fa fa-angle-double-right"></i> Nani Maria Kinder Garten School
                </a>
               </h6>
               <a href="tel:+91 89747 55860" class="contactLink">
