--- a/Children-Care-Institute.html
+++ b/Children-Care-Institute.html
@@ -780,7 +780,7 @@
                 <div class="mr-1">
                    <img src="./assets/images/placeholder.png" alt="location" width="22">
                 </div> <p>
-                 Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
+                 Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh, pin - 792110
                 </p>
               </address>
             </a>
@@ -849,6 +849,9 @@
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-between">
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
+            </div>
+            <div class="less-opacity">
+              Website content writer @Miss Doni Riram
             </div>
             <div class="less-opacity">
               Designed and Developed by @Dipak
