--- a/index.html
+++ b/index.html
@@ -612,17 +612,6 @@
           </div>
         </div>
       </div>
-      <div class="container pt-5">
-        <div class="row pt-5">
-          <div class="col-md-12 text-center">
-            <h5>Website content writer</h5>
-            <div class="imgBox">
-              <img src="./assets/images/doni22.jpeg" alt="img">
-            </div>
-            <h5><b>Miss Doni Riram</b> </h5>
-          </div>
-        </div>
-      </div>
     </section>
   </main>
   <footer class="bg-light pt-5">
@@ -654,7 +643,7 @@
                 <div class="mr-1">
                    <img src="./assets/images/placeholder.png" alt="location" width="22">
                 </div> <p>
-                 Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh
+                 Cheta II, Roing Lower Dibang Valley District, Arunachal Pradesh, pin - 792110
                 </p>
               </address>
             </a>
@@ -723,6 +712,9 @@
           <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-between">
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
+            </div>
+            <div class="less-opacity">
+              Website content writer @Miss Doni Riram
             </div>
             <div class="less-opacity">
               Designed and Developed by @Dipak
