--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <!-- font awesome -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -95,12 +96,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h1>Advancing the Welfare of  Women and Children</h1>
-            <p>
+            <h1 data-aos="fade-up" data-aos-duration="1500">Advancing the Welfare of  Women and Children</h1>
+            <p data-aos="fade-up" data-aos-duration="2000">
               Nani Maria Society has given due emphasis on empowerment of women and nurturing orphan & destitute women
               and Children.
             </p>
-            <a href="./donate.html" class="btn btn-common">
+            <a href="./donate.html" class="btn btn-common" data-aos="fade-up" data-aos-duration="3000">
               Donate
             </a>
           </div>
@@ -111,10 +112,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
               <h3>About Us <span></span></h3>
             </div>
-            <p>
+            <p data-aos="fade-up" data-aos-duration="1500">
               NANI MARIA SOCIETY is an NGO founded by Smt. Desai Linggi, in the year 2002 based at Cheta-II Roing, Lower
               Dibang Valley Arunachal Pradesh, India. Nani Maria Society was formed to support and assist women and
               children of marginalized tribal communities and areas in the eastern region of the state, Arunachal
@@ -124,13 +125,13 @@
             </p>
           </div>
           <div class="col-md-6 offset-md-6">
-            <p>
+            <p data-aos="fade-up" data-aos-duration="1500">
               NMS has been implementing and extending various programs for the cause, through campaigning community
               awareness, need based vocational training, rehabilitation service for orphan and distressed women
               irrespective of caste creed or religion. Under this program, the NMCH undertakes to identify children
               victimized by Child Labor, human trafficking, and Child marriage.
             </p>
-            <a href="./about-us.html" class="btn btn-common">
+            <a href="./about-us.html" class="btn btn-common" data-aos="fade-up" data-aos-duration="2000">
               Read More
             </a>
           </div>
@@ -141,14 +142,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mt-5">
-            <img src="./assets/images/teamwork.png" alt="founder" class="img-fluid">
+            <img src="./assets/images/teamwork.png" alt="founder" class="img-fluid" data-aos="fade-up" data-aos-duration="1500">
           </div>
           <div class="col-md-6 d-flex align-items-center mt-md-0 mt-3">
             <div>
-              <div class="sec_titles">
-                <h3>What We Do <span></span></h3>
+              <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
+                <h3 data-aos="fade-up" data-aos-duration="2000">What We Do <span></span></h3>
               </div>
-              <div>
+              <div data-aos="fade-up" data-aos-duration="3000">
                 <h4>In brief, these are</h4>
                 <ul>
                   <li>
@@ -181,13 +182,13 @@
           </div>
           <div class="col-md-12 my-4 text-center">
             <div class="sec_titles sec_titles-head">
-              <h3>About The Founder Chairperson Of NMS <span></span></h3>
+              <h3 data-aos="fade-up" data-aos-duration="1500">About The Founder Chairperson Of NMS <span></span></h3>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-center">
             <div>
-              <h4>OBJECTIVES</h4>
-              <ul>
+              <h4 data-aos="fade-up" data-aos-duration="1500">OBJECTIVES</h4>
+              <ul data-aos="fade-up" data-aos-duration="2000">
                 <li>
                   To focus on promoting the survival, protection, development welfare
                   and participation of women and children in a holistic manner.
@@ -200,23 +201,23 @@
             </div>
           </div>
           <div class="col-md-6 mt-md-0 mt-3">
-            <div class="img_shadow">
+            <div class="img_shadow" data-aos="fade-up" data-aos-duration="1500">
               <img src="./assets/images/founder.jpg" alt="founder" class="w-100 img-fluid">
             </div>
           </div>
           <div class="col-md-6 mt-5 order-md-1 order-2 d-flex align-items-center">
-            <img src="./assets/images/customer-journey.png" alt="founder" class="img-fluid">
+            <img src="./assets/images/customer-journey.png" alt="founder" class="img-fluid" data-aos="fade-up" data-aos-duration="2000">
           </div>
           <div class="col-md-6 d-flex align-items-center mt-4 order-md-2 order-1">
-            <div>
-              <h4>EXPERIENCE</h4>
-              <p>
+            <div data-aos="fade-up" data-aos-duration="1500">
+              <h4 data-aos="fade-up" data-aos-duration="2000">EXPERIENCE</h4>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 Smt. Desai Linggi is a professional social worker and women & child rights activist hailing from
                 Cheta-II Roing, Lower Dibang Valley Arunachal Pradesh, India. She did her Education from Convent School,
                 Doomdooma and Don Bosco Bible School , Hijuguri. Thereafter, She Joined Divine Word of School as an
                 Assistant Teacher.
               </p>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="3000">
                 In 2002, She Initiated a small Hostel of mid-size range Hostel Named “Nani Maria Hostel” As things
                 started getting better and bigger, this paved a way for her to start a school of her own ani Maria
                 Kinder Garten School” . This was her milestone and presently various activities for destitute women and
@@ -231,12 +232,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
               <h3>Awards Received <span></span></h3>
             </div>
           </div>
           <div class="col-md-3">
-            <div class="awrds_card">
+            <div class="awrds_card" data-aos="fade-up" data-aos-duration="1000">
               <div class="awrds_card-icon d-flex justify-content-center align-items-center">
                 <img src="./assets/images/awards.png" alt="awrds" width="200">
               </div>
@@ -248,7 +249,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="awrds_card">
+            <div class="awrds_card" data-aos="fade-up" data-aos-duration="1500">
               <div class="awrds_card-icon d-flex justify-content-center align-items-center">
                 <img src="./assets/images/awards.png" alt="awrds" width="200">
               </div>
@@ -261,7 +262,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="awrds_card">
+            <div class="awrds_card" data-aos="fade-up" data-aos-duration="2000">
               <div class="awrds_card-icon d-flex justify-content-center align-items-center">
                 <img src="./assets/images/awards.png" alt="awrds" width="200">
               </div>
@@ -274,7 +275,7 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="awrds_card">
+            <div class="awrds_card" data-aos="fade-up" data-aos-duration="3000">
               <div class="awrds_card-icon d-flex justify-content-center align-items-center">
                 <img src="./assets/images/awards.png" alt="awrds" width="200">
               </div>
@@ -292,16 +293,16 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
               <h3>Asociations<span></span></h3>
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-center">
             <div>
-              <p>
+              <p data-aos="fade-up" data-aos-duration="2000">
                 Besides NMS, she is also associate with various boards and committees namely
               </p>
-              <ul>
+              <ul data-aos="fade-up" data-aos-duration="3000">
                 <li>
                   Chairperson, Child Welfare Committee, Anini, Dibang Valley, Arunachal Pradesh from 2010 to 2014.
                 </li>
@@ -331,7 +332,7 @@
             <img src="./assets/images/community.png" alt="founder" class="img-fluid rotation">
           </div>
           <div class="col-md-12 mt-md-0 mt-3">
-            <p>
+            <p data-aos="fade-up" data-aos-duration="3500">
               The work of Mrs. Desai towards the marginalized and underprivileged children and women has been
               appreciated by the Honorable Chief Minister of Arunachal Pradesh and the Governor of Arunachal Pradesh
               Shri B. D. Mishra.
@@ -344,13 +345,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <div class="sec_titles">
+            <div class="sec_titles" data-aos="fade-up" data-aos-duration="1500">
               <h3>Our Gallery<span></span></h3>
             </div>
           </div>
         </div>
       </div>
-      <div class="galler_home_grid tz-gallery">
+      <div class="galler_home_grid tz-gallery" data-aos="fade-up" data-aos-duration="2000">
         <div class="items">
           <a href="./assets/images/g1.jpg" class="lightbox">
             <img src="./assets/images/g1.jpg" alt="img">
@@ -395,7 +396,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 mt-4 text-center">
-            <a href="./photo-gallery.html" class="btn btn-common">
+            <a href="./photo-gallery.html" class="btn btn-common" data-aos="fade-up" data-aos-duration="3000">
               View More
             </a>
           </div>
@@ -406,7 +407,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <div class="sec_titles sec_titles-head mb-4 text-center">
+            <div class="sec_titles sec_titles-head mb-4 text-center" data-aos="fade-up" data-aos-duration="1500">
               <img src="./assets/images/adoption.png" alt="img" class="Y_floating">
               <h3 class="italic">Our Thanks</h3>
             </div>
@@ -414,7 +415,7 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <div class="thanks_card">
+            <div class="thanks_card" data-aos="fade-up" data-aos-duration="1500">
               <img src="./assets/images/thank-you.png" alt="thanks" class="thanksStikcer">
                <h3>Government Of Arunachal Pradesh</h3>
                <ul>
@@ -434,7 +435,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="thanks_card">
+            <div class="thanks_card" data-aos="fade-up" data-aos-duration="2000">
               <img src="./assets/images/thank-you.png" alt="thanks" class="thanksStikcer">
                <h3>Voluntary Organization</h3>
                <ul>
@@ -457,7 +458,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="thanks_card">
+            <div class="thanks_card" data-aos="fade-up" data-aos-duration="3000">
               <img src="./assets/images/thank-you.png" alt="thanks" class="thanksStikcer">
                <h3>Personally</h3>
                <div class="marquee">
@@ -744,6 +745,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
   <script>
      baguetteBox.run('.tz-gallery');
+  </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
   </script>
 </body>
 
