--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -444,15 +444,9 @@
           <hr>
         </div>
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-between">
+          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center d-flex justify-content-center">
             <div>
               <p>© Nani Maria <span id="copyright-year"></span> All right Reserved.</p>
-            </div>
-            <div class="less-opacity">
-              Website content writer @Miss Doni Riram
-            </div>
-            <div class="less-opacity">
-              Designed and Developed by @Dipak
             </div>
           </div>
         </div>
